--- a/cards/cards.css
+++ b/cards/cards.css
@@ -5,6 +5,7 @@ body, html {
     height: 100%;
 }
 
+
 .container {
     display: grid;
     grid-template-rows: 110px auto;
@@ -14,6 +15,7 @@ body, html {
         "title title"
         "left right";
     height: 100vh;
+    row-gap: 20px;
 }
 
 
@@ -30,7 +32,6 @@ body, html {
 
 /* Menu */
 .menu {
-    grid-area: header;
     text-align: center;
     padding: 22px;
     font-size: 23px;
@@ -45,7 +46,7 @@ body, html {
     display: inline-block;
     padding-bottom: 10px;
     margin-right: 57px; 
-    /* background-color: #122cf0;  */
+    cursor: pointer;
 }
 
 .active {
@@ -64,13 +65,12 @@ body, html {
     border-radius: 10px;
 }
 
-/* Resto del contenido */
+
 .left {
     grid-area: left;
 
     margin-left: 115px;
     margin-top: -90px;
-    /* background-color: #8b4444; */
 } 
 
 .right {
@@ -91,20 +91,20 @@ body, html {
     margin-top: 30px;
 }
 
-
 .title{
     color: #000;
     font-family: Poppins;
-    font-size: 55px;
+    font-size: clamp(24px, 8vw, 55px);
     font-style: normal;
     font-weight: 700;
     line-height: normal; 
-    text-align: center; 
-    margin-top: 2rem;
+    text-align: left; 
     width: 100%;
-
-
+    margin-bottom: 2rem;
+    margin-left: 2em;
+    white-space: nowrap;
 }
+
 
 
 input{
@@ -155,6 +155,19 @@ h2{
     width: 80%;
 }
 
+.logOut{
+    border: 2px solid #7A7485;
+    border-radius: 30px;
+    background-color: #7A7485;
+    color: white;
+    justify-content: center;
+    text-align: center;
+    padding: 10px 20px;
+    cursor: pointer;
+
+}
+
+
 @media (max-width: 768px) {
     .container {
         grid-template-columns: 1fr; 
@@ -166,13 +179,15 @@ h2{
             "right";
 
         justify-items: center;
+        gap: 50px;
     }
 
 
 
     .title{
-        justify-self: center;
-        font-size: 45px;
+
+        text-align: center;
+        margin-left: 0;
     }
     
     input, select{
@@ -182,11 +197,11 @@ h2{
 
     .left{
         margin-left: 0;
-        margin-top: 0px;
+        margin-top: -75px;
     }
 
     .right{
-        margin-top: 0px;
+        margin-top: -60px;
     }
 
 
@@ -203,15 +218,26 @@ h2{
 
     .header {
         font-size: 18px;
-        gap: 15px;      
+        gap: 15px; 
+    
     }
 
 }
 
 @media (max-width: 1024px){
 
+
+    .container {
+        display: grid;
+        grid-template-rows: auto;
+
+    }
+
+    .header{
+        margin-bottom: -6em;
+    }
+
     .title{
-        margin-top: 4em;
         margin-bottom: 2em;
     }
 
