--- a/payments/payments.css
+++ b/payments/payments.css
@@ -14,6 +14,7 @@ body, html {
         "title title"
         "left right";
     height: 100vh;
+    row-gap: 20px;
 }
 
 
@@ -30,7 +31,7 @@ body, html {
 
 /* Menu */
 .menu {
-    grid-area: header;
+
     text-align: center;
     padding: 22px;
     font-size: 23px;
@@ -45,6 +46,7 @@ body, html {
     display: inline-block;
     padding-bottom: 10px;
     margin-right: 57px; 
+    cursor: pointer;
     /* background-color: #122cf0;  */
 }
 
@@ -64,13 +66,13 @@ body, html {
     border-radius: 10px;
 }
 
-/* Resto del contenido */
+
 .left {
     grid-area: left;
 
     margin-left: 115px;
     margin-top: -90px;
-    /* background-color: #8b4444; */
+    
 } 
 
 .right {
@@ -95,13 +97,15 @@ body, html {
 .title{
     color: #000;
     font-family: Poppins;
-    font-size: 55px;
+    font-size: clamp(24px, 8vw, 55px);
     font-style: normal;
     font-weight: 700;
     line-height: normal; 
-    text-align: center; 
-    margin-top: 2rem;
+    text-align: left; 
     width: 100%;
+    margin-bottom: 2rem;
+    margin-left: 2em;
+    white-space: nowrap;
 }
 
 
@@ -158,16 +162,15 @@ select{
     font-size: 20px;
 }
 
-@media (max-width: 1300px){
-    .title{
-        margin-top: 1.5em;
-    }
-}
-@media (max-width: 1024px){
-
-    .header{
-        margin-bottom: 3em;
-    }
+.logOut{
+    border: 2px solid #7A7485;
+    border-radius: 30px;
+    background-color: #7A7485;
+    color: white;
+    justify-content: center;
+    text-align: center;
+    padding: 10px 20px;
+    cursor: pointer;
 
 }
 
@@ -182,14 +185,14 @@ select{
             "right";
 
         justify-items: center;
+        gap:50px;
     }
 
 
 
     .title{
-        justify-self: center;
-        font-size: 45px;
-        margin-top: -.3em;
+        text-align:  center;
+        margin-left: 0;
     }
     
     input, select{
@@ -199,7 +202,7 @@ select{
 
     .left{
         margin-left: 0;
-        margin-top: 0px;
+        margin-top: -75px;
     }
 
     .right{
@@ -220,12 +223,52 @@ select{
 
     .header {
         font-size: 18px;
-        gap: 15px;      
+        gap: 15px; 
+    
     }
+
 
 }
 
-.error{
+@media (max-width: 1024px){
+
+    .container {
+        display: grid;
+        grid-template-rows: auto;
+
+    }
+
+    .header{
+        margin-bottom: -6em;
+    }
+
+    .title{
+        margin-bottom: 2em;
+    }
+}
+
+@media (max-width: 1300px){
+    .title{
+        margin-top: 1.3em;
+    }
+}
+
+
+.input-control.error input{
+    border: 3px solid #BE0000;
+    border-radius: 30px;
+    
+}
+
+.input-control.error .error {
+    display: block; 
+}
+
+
+
+.error {
     color: #BE0000;
-    size: 14px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 5px;
 }
