--- a/register/register.css
+++ b/register/register.css
@@ -8,7 +8,7 @@ body {
 
 .conteiner {
     width: 60%; 
-    height: 100%;
+    height: 100vh;
     background-color: white; 
     display: flex; 
     justify-content: center; 
@@ -114,6 +114,7 @@ body {
  @media (max-width: 1024px) {
     .conteiner {
         width: 60%;
+        height: 100vh;
     }
     .inputs {
         width: 60%;
@@ -163,8 +164,9 @@ body {
 
     
     .conteiner {
-        width: 100%;
-        height: 70%; 
+        width: 70%;
+        
+        height: 100vh;
         background-color: white;
         display: flex;
         flex-direction: column;
