--- a/transfer/transfer.css
+++ b/transfer/transfer.css
@@ -14,6 +14,7 @@ body, html {
         "title title"
         "left right";
     height: 100vh;
+    row-gap: 20px;
 }
 
 
@@ -30,7 +31,7 @@ body, html {
 
 /* Menu */
 .menu {
-    grid-area: header;
+
     text-align: center;
     padding: 22px;
     font-size: 23px;
@@ -45,7 +46,7 @@ body, html {
     display: inline-block;
     padding-bottom: 10px;
     margin-right: 57px; 
-    /* background-color: #122cf0;  */
+    cursor: pointer;
 }
 
 .active {
@@ -64,13 +65,12 @@ body, html {
     border-radius: 10px;
 }
 
-/* Resto del contenido */
+
 .left {
     grid-area: left;
 
     margin-left: 115px;
     margin-top: -90px;
-    /* background-color: #8b4444; */
 } 
 
 .right {
@@ -95,17 +95,16 @@ body, html {
 .title{
     color: #000;
     font-family: Poppins;
-    font-size: 55px;
+    font-size: clamp(24px, 8vw, 55px);
     font-style: normal;
     font-weight: 700;
     line-height: normal; 
-    text-align: center; 
-    margin-top: 2rem;
+    text-align: left; 
     width: 100%;
-
-
+    margin-bottom: 2rem;
+    margin-left: 2em;
+    white-space: nowrap;
 }
-
 
 input{
     border-radius: 30px;
@@ -155,6 +154,18 @@ h2{
     width: 80%;
 }
 
+.logOut{
+    border: 2px solid #7A7485;
+    border-radius: 30px;
+    background-color: #7A7485;
+    color: white;
+    justify-content: center;
+    text-align: center;
+    padding: 10px 20px;
+    cursor: pointer;
+
+}
+
 @media (max-width: 768px) {
     .container {
         grid-template-columns: 1fr; 
@@ -166,13 +177,14 @@ h2{
             "right";
 
         justify-items: center;
+        gap:50px;
     }
 
 
 
     .title{
-        justify-self: center;
-        font-size: 45px;
+        text-align:  center;
+        margin-left: 0;
     }
     
     input, select{
@@ -182,11 +194,11 @@ h2{
 
     .left{
         margin-left: 0;
-        margin-top: 0px;
+        margin-top: -75px;
     }
 
     .right{
-        margin-top: 0px;
+        margin-top: -60px;
     }
 
 
@@ -203,22 +215,52 @@ h2{
 
     .header {
         font-size: 18px;
-        gap: 15px;      
+        gap: 15px; 
+    
     }
+
 
 }
 
 @media (max-width: 1024px){
 
-    .title{
-        margin-top: 4em;
-        margin-bottom: 2em;
+    .container {
+        display: grid;
+        grid-template-rows: auto;
+
     }
 
+    .header{
+        margin-bottom: -6em;
+    }
+
+    .title{
+        margin-bottom: 2em;
+    }
 }
 
 @media (max-width: 1300px){
     .title{
         margin-top: 1.3em;
     }
+}
+
+
+.input-control.error input{
+    border: 3px solid #BE0000;
+    border-radius: 30px;
+    
+}
+
+.input-control.error .error {
+    display: block; 
+}
+
+
+
+.error {
+    color: #BE0000;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+    margin-top: 5px;
 }
