--- a/home_page/home_page.css
+++ b/home_page/home_page.css
@@ -7,8 +7,20 @@ body {
     align-items: center;
 }
 
-.conteiner {
-    width: 80%;
+.logo{
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo img{
+    width: 50%;
+    height: auto;
+}
+
+.container {
+    width: 60%;
     height: 100%;
     background-color: white;
     display: flex;
@@ -53,7 +65,7 @@ body {
     font-size: 20px;
 }
 
-.conteiner-text {
+.container-text {
     position: absolute;
     bottom: 100px;
     right: 50px;
@@ -77,7 +89,7 @@ body {
     color: #00085A;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1200px) {    
     .text {
         font-family: 'Inter', sans-serif;
         font-weight: bold;
@@ -87,7 +99,7 @@ body {
         margin: 0;
     }
 
-    .conteiner-text {
+    .container-text {
         bottom: 80px;
         right: 30px;
         top: 200px;
@@ -95,8 +107,13 @@ body {
 }
 
 @media (max-width: 768px) {
-    .conteiner {
-        width: 90%;
+    body{
+        flex-direction: column;    
+        align-items: stretch;   
+    }
+
+    .container {
+        width:100%;
     }
 
     .buttons {
@@ -117,7 +134,7 @@ body {
         margin: 0;
     }
 
-    .conteiner-text {
+    .container-text {
         bottom: 60px;
         right: 20px;
     }
@@ -130,7 +147,7 @@ body {
         line-height: 1.2; /
     }
 
-    .conteiner-text {
+    .container-text {
         right: 10px; 
         bottom: 40px;
 
