--- a/login/login.css
+++ b/login/login.css
@@ -4,12 +4,22 @@ body {
     margin: 0; 
     display: flex; 
     justify-content: flex-end; 
-   
+}
+
+.logo{
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    align-items: center;
+}
+
+.logo img{
+    width: 50%;
+    height: auto;
 }
 
 .container {
     width: 60%;
-    /* height: 100%; */
     height: 100vh;
     background-color: white; 
     display: flex; 
@@ -125,7 +135,7 @@ body {
 
 /* Ajustes para pantallas medianas BIEN*/
  @media (max-width: 1024px) {
-    .conteiner {
+    .container {
         width: 60%;
         height: 100vh;
     }
@@ -141,71 +151,18 @@ body {
         width: 120px;
         font-size: 18px;
     }
-/* .borde{
-    width: 95%;
-    height: 30px;
-
-} */
-
-.log {
-
-    margin-top: -30px;  /*ñ */
-  
+    .log {
+        margin-top: -30px;
+    }
 }
- }
-
-
-
-
-/* Ajustes para pantallas pequeñas (tablets y móviles) */
- /*@media (max-width: 768px) {
-    .conteiner {
-        width: 90%;
-        
-    }
-    .inscribirse {
-        font-size: 40px;
-        margin-top: 0;
-    }
-    .inputs {
-        width: 80%;
-        height: auto;
-    }
-    .borde {
-        width: 95%;
-        height: 35px;
-    }
-    .buttons {
-        width: 80%;
-        flex-direction: column;
-        gap: 10px;
-    }
-    .login, .cancel {
-        width: 100%;
-        height: 40px;
-        font-size: 16px;
-    }
-} 
-  */
-
-
-
-
-
-
-
-
- 
 
 @media (max-width: 568px) {
     body {
         display: flex;
         flex-direction: column;
         align-items: stretch; 
-        
     }
 
-    
     .log {
         width: 100%;
         height: 33%; 
@@ -218,10 +175,9 @@ body {
          /* background-color: #ffffff;   */
         color: rgb(0, 0, 0);  
     }
-
     
-    .conteiner {
-        width: 60%;
+    .container {
+        width: 100%;
         /* height: 70%;  */
         height: 100vh;
         background-color: white;
@@ -230,14 +186,12 @@ body {
         justify-content: center;
         align-items: center;
         margin-top: 0px;
-
-        /* margin-top: -10px; */
     }
 
     .inputs {
         width: 70%;   
         height: 50%;
-           margin-top: -20px; 
+        margin-top: -20px; 
         
     }
 
