--- a/inicio/inicio.css
+++ b/inicio/inicio.css
@@ -6,8 +6,7 @@ body, html {
 
 .container {
     display: grid;
-  
-    grid-template-rows: 110px 1fr;
+    grid-template-rows: 110px auto;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
         "header header"
@@ -19,15 +18,15 @@ body, html {
 .header {
     grid-area: header;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
     font-size: 20px;
     display: flex;
     justify-content: center;
-    gap: 40px;
-    /* background-color: #122cf0;   */
+    gap: 20px;
 }
 
 /* Menu */
+
 .menu {
     grid-area: header;
     text-align: center;
@@ -38,14 +37,11 @@ body, html {
     
 }
 
-
-
 .menu p {
     display: inline-block;
     padding-bottom: 10px;
     margin-right: 57px; 
     cursor: pointer;
-    /* background-color: #122cf0;  */
 }
 
 .active {
@@ -53,16 +49,29 @@ body, html {
     padding-bottom: 10px;
 }
 
+.active img {
+    visibility: hidden;
+}
+
+.icons img {
+    height: 30px;
+    width: auto;
+    visibility: hidden;
+    
+}
+
+
 .active::after {
     content: "";
     position: absolute;
     bottom: -5px; 
-    left: 0;
-    width: 100%;
+    left: -20px;
+    width: 140%;
     height: 8px;
     background-color: #00085A;
     border-radius: 10px;
 }
+
 
 /* Resto del contenido */
 .left {
@@ -171,8 +180,6 @@ td {
     font-size: 50px;
     margin-top: -20px;
     padding: 0 20px;
-    
-    
 }
 
 .saldo-cuenta{
@@ -188,8 +195,6 @@ td {
     color: black; 
     text-decoration: none; 
 }
-
-
 
 .container-card {
     display: flex;
@@ -227,8 +232,22 @@ td {
     .container {
         display: flex;
         flex-direction: column; 
-        gap: 15px; 
+        gap: 5px; 
     }
+
+
+    /*
+    .active, .noline, .logOut {
+        visibility: hidden;
+        cursor: not-allowed;
+        pointer-events: none;
+        display: none;        
+    }
+    .icons img {
+        visibility: visible;
+    }
+    */
+
 
     .left, .right {
         padding: 8px; 
@@ -250,10 +269,10 @@ td {
         text-align: center;
     }
 
-    .card {
+    /*.card {
         width: 400px; 
         height: auto;
-    }
+    }*/
 
     .saldo {
         font-size: 24px;
@@ -267,14 +286,13 @@ td {
         grid-area: header;
         text-align: center;
         padding: 10px;
-        font-size: 70%;
+        /*font-size: 70%;*/
         font-family: "Josefin Sans";
         display: block; 
-        
-        
     }
-   
 
-
-  
+    .container-card{
+        height: auto;
+    }
+ 
 }
