--- a/cards/cards.css
+++ b/cards/cards.css
@@ -114,7 +114,7 @@ input{
     margin: 10px 0;
     padding: 10px;
     width: 80%;
-    height: 45px;
+    height: 25px;
 }
 
 select{
@@ -170,7 +170,7 @@ h2{
 
 @media (max-width: 768px) {
     .container {
-        grid-template-columns: auto; 
+        grid-template-columns: 1fr; 
         grid-template-rows: auto;
         grid-template-areas:
             "header"
@@ -179,10 +179,13 @@ h2{
             "right";
 
         justify-items: center;
-        gap: 10px;
+        gap: 50px;
     }
 
+
+
     .title{
+
         text-align: center;
         margin-left: 0;
     }
