--- a/inicio/inicio.css
+++ b/inicio/inicio.css
@@ -12,21 +12,23 @@ body, html {
         "header header"
         "left right";
     height: 100vh;
+    row-gap: 20px;
+
 }
 
 /* Header */
 .header {
     grid-area: header;
     text-align: center;
-    padding: 10px;
+    padding: 15px;
     font-size: 20px;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
+    /* background-color: #122cf0;   */
 }
 
 /* Menu */
-
 .menu {
     grid-area: header;
     text-align: center;
@@ -37,41 +39,32 @@ body, html {
     
 }
 
+
+
 .menu p {
     display: inline-block;
     padding-bottom: 10px;
     margin-right: 57px; 
     cursor: pointer;
+    /* background-color: #122cf0;  */
 }
+
 
 .active {
     position: relative;
     padding-bottom: 10px;
 }
 
-.active img {
-    visibility: hidden;
-}
-
-.icons img {
-    height: 30px;
-    width: auto;
-    visibility: hidden;
-    
-}
-
-
 .active::after {
     content: "";
     position: absolute;
     bottom: -5px; 
-    left: -20px;
-    width: 140%;
+    left: 0;
+    width: 100%;
     height: 8px;
     background-color: #00085A;
     border-radius: 10px;
 }
-
 
 /* Resto del contenido */
 .left {
@@ -166,7 +159,6 @@ td {
     margin-top: 7px; 
     justify-content: center;
 
-
 }
 
 
@@ -180,6 +172,8 @@ td {
     font-size: 50px;
     margin-top: -20px;
     padding: 0 20px;
+    
+    
 }
 
 .saldo-cuenta{
@@ -195,6 +189,8 @@ td {
     color: black; 
     text-decoration: none; 
 }
+
+
 
 .container-card {
     display: flex;
@@ -232,22 +228,8 @@ td {
     .container {
         display: flex;
         flex-direction: column; 
-        gap: 5px; 
+        gap: 15px; 
     }
-
-
-    /*
-    .active, .noline, .logOut {
-        visibility: hidden;
-        cursor: not-allowed;
-        pointer-events: none;
-        display: none;        
-    }
-    .icons img {
-        visibility: visible;
-    }
-    */
-
 
     .left, .right {
         padding: 8px; 
@@ -269,10 +251,14 @@ td {
         text-align: center;
     }
 
-    /*.card {
+    .card {
         width: 400px; 
+        height: 200px;
+    }
+    .container-card {
         height: auto;
-    }*/
+    }
+
 
     .saldo {
         font-size: 24px;
@@ -286,13 +272,10 @@ td {
         grid-area: header;
         text-align: center;
         padding: 10px;
-        /*font-size: 70%;*/
+        font-size: 70%;
         font-family: "Josefin Sans";
         display: block; 
+        
     }
-
-    .container-card{
-        height: auto;
-    }
- 
+  
 }
