--- a/movements/movements.css
+++ b/movements/movements.css
@@ -28,7 +28,7 @@ body, html {
     font-size: 20px;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 40px;
 }
 
 /* Menu */
@@ -56,16 +56,6 @@ body, html {
     padding-bottom: 10px;
 }
 
-.active img {
-    visibility: hidden;
-}
-
-.icons img {
-    height: 30px;
-    width: auto;
-    visibility: hidden;
-    
-}
 .active::after {
     content: "";
     position: absolute;
@@ -258,7 +248,7 @@ h2{
 }
 
 
-@media (max-width: 768px) {
+/*@media (max-width: 768px) {
     .container {
         grid-template-rows: auto;
         grid-template-areas:
@@ -267,27 +257,11 @@ h2{
             "movements-table";
     }
 
-    .header {
-        font-size: 8px;
-        gap: 10px;      
-    }
 
     .header {
-        font-size: 8px;
-        gap: 10px;      
+        font-size: 18px;
+        gap: 15px;      
     }
-    /*    
-    .active, .noline, .logOut {
-        visibility: hidden;
-        cursor: not-allowed;
-        pointer-events: none;
-        display: none;        
-    }
-
-    .icons img {
-        visibility: visible;
-    }
-    */
 
 }
 
@@ -319,3 +293,4 @@ h2{
             "movements-table";
     }
 }
+}*/
