--- a/movements/movements.css
+++ b/movements/movements.css
@@ -3,7 +3,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
-    min-width: 800px;
+    /*min-width: 800px;*/
 }
 
 .container {
@@ -101,6 +101,10 @@ table {
     font-size: 20px;
     font-family: 'Josefin Sans', sans-serif;
     margin: 0 auto;
+}
+
+thead {
+    background-color: darkgrey;
 }
 
 .encabezado {
@@ -219,7 +223,7 @@ h2{
 .movements-table{
     
     width: 90%;
-    height: 611px;
+    height: auto;
     flex-shrink: 0;
     border-radius: 30px;
     margin-top: 20px;
@@ -248,7 +252,7 @@ h2{
 }
 
 
-/*@media (max-width: 768px) {
+@media (max-width: 768px) {
     .container {
         grid-template-rows: auto;
         grid-template-areas:
@@ -257,10 +261,21 @@ h2{
             "movements-table";
     }
 
-
     .header {
         font-size: 18px;
         gap: 15px;      
+    }
+    
+    table {
+        font-size: 12px;
+    }
+
+    td {
+        padding: 10px;
+    }
+
+    .movements-table {
+        height: auto;
     }
 
 }
@@ -293,4 +308,3 @@ h2{
             "movements-table";
     }
 }
-}*/
