Updated web page

--- a/movements/movements.css
+++ b/movements/movements.css
@@ -103,9 +103,9 @@ table {
     margin: 0 auto;
 }
 
-thead {
+/*thead {
     background-color: darkgrey;
-}
+}*/
 
 .encabezado {
     color: #7A7485;
